FIX Only add extra tree spacing for injects-list

--- a/packages/gui/src/styles.css
+++ b/packages/gui/src/styles.css
@@ -242,7 +242,7 @@ i.material-icons {
   margin-bottom: 1.33em;
 }
 
-.mtc__container > div > ul > li {
+.injects-list .mtc__container > div > ul > li {
   margin-top: 38px;
 }
 .mst__container {
